test/tests/compiler/18_structures/invalid_types/extra_credit/other_features/compound_assign_to_struct.plx
#  Can't use operands of structure type in compound assignment operations
type struc s(i: i32)
pub fn main(none) i32 {
    x: struc s = $(10)
    x += 10
    return 0
}
